tooling/nargo_cli/tests/snapshots/execution_success/return_twice/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "in0",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "tuple",
        "fields": [
          {
            "kind": "field"
          },
          {
            "kind": "field"
          }
        ]
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _2",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : [_1, _2]",
    "EXPR [ (-1, _0, _0) (1, _1) 0 ]",
    "EXPR [ (-1, _1) (1, _2) 0 ]"
  ],
  "debug_symbols": "dY/dCoMwDIXfJde9GOwPfJUxJNYohZCW2ApDfPdF0U0Gu0pPvn6HdoKWmtLXQbo4QPWYoNHAHPqao8ccoth2mh3ssc5KZCs4cLMSKkmGSgqzgxG5rJeGhLLOjGr05ICktWmFXWBaTrP72qf/6u2yuffzR76a/bSEPujve0fUgA3TFrsi/kDzK+1k/2/S6KktSkvTyqz7DQ==",
  "file_map": {},
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
