tooling/nargo_cli/tests/snapshots/execution_success/return_twice/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field):
    (no terminator instruction)
}
[return_twice] Circuit output: (0x64, 0x64)
